# Detect-Waste-ADN

./: .gitignore  README.md  pyproject.toml  report.tex  requirements.txt
configs/data/: mapping_label.json  roboflow_7class.yaml  taco_7class.yaml  taco_7class_kaggle.yaml
configs/experiments/: run1_baseline.yaml  run2_strong_aug.yaml  run3_freeze_cosine_warmup.yaml  run4_balanced_sampler.yaml
configs/models/: hybrid_finetune.yaml  hybrid_yolov8n_effb0.yaml  rtdetr_l.yaml  rtdetr_r18.yaml  yolov8s.yaml
data/: README.md
notebooks/: 01_preprocess_taco_roboflow.ipynb  02_train_hybrid_yolov8n_effb0.ipynb  03_train_yolov8s_detector.ipynb  04_train_rtdetr_l_detector.ipynb  eda_analysis.ipynb  kaggle_runner.ipynb
scripts/: auto_download_taco.py  easy_infer.py
scripts/data/: apply_orthogonal_augmentation.py  build_label_mapping.py  check_coco.py  convert_coco_to_yolo.py  create_crop_dataset.py  import_roboflow_coco.py  merge_coco_datasets.py  prepare_taco.py  run_eda.py  split_coco.py
scripts/eval/: ablation_comparison.py  evaluate_classifier.py  evaluate_detector.py  evaluate_hybrid.py  run_xai.py
scripts/infer/: infer_image.py
scripts/train/: run_ablation.py  train_classifier.py  train_detector.py
src/waste_detection/: __init__.py
src/waste_detection/config/: config_loader.py  schemas.py
src/waste_detection/data/: bbox_sanitizer.py  coco_reader.py  coco_splitter.py  coco_validator.py  crop_builder.py  crop_dataset.py  dataset_utils.py  eda_analyzer.py  (+6 more)
tests/: test_bbox_clamp.py  test_crop_builder.py  test_label_mapping.py  test_orthogonal_augmenter.py
(+38 files in other folders)
